Added early version of panel title

--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,8 @@
 
   <body>
     <div id="map"></div>
-    <div id="panel" class="closed"></div>
+    <div id="panel" class="closed">  
+    </div>
     <div class="hidden">
      <div id="pac-card">
        <div id="pac-title">Find the nearest location</div>
