--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
 
     <script
       defer
-
+      
     ></script>
   </head>
 
@@ -16,7 +16,7 @@
     </div>
     <div class="hidden">
      <div id="pac-card">
-       <div id="pac-title">Find the nearest location</div>
+       <div id="pac-title">Find the nearest location to...</div>
        <div id="pac-container">
          <input
            id="pac-input"
