--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Madison Bike Repair Locations</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="icon" type="image/x-icon" href="bicycle.ico">
     <script defer src="app.js"></script>
 
     <script
