--- a/static/index.html
+++ b/static/index.html
@@ -3,30 +3,24 @@
     <title>Madison Bike Repair Locations</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script defer src="app.js"></script>
-
-    <script
-      defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmBgSWWPs4Ocit1Fe3gLNtgrU31DzUfKk&v=weekly&libraries=places&callback=initialize" key=AIzaSyCmBgSWWPs4Ocit1Fe3gLNtgrU31DzUfKk&v=weekly&libraries=places&callback=initialize"
-    ></script>
+    <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmBgSWWPs4Ocit1Fe3gLNtgrU31DzUfKk&v=weekly&libraries=places&callback=initialize"></script>
   </head>
-
   <body>
-    <div id="pac-card">
+    <!-- Side Container for pac-card and panel -->
+    <div id="side-container">
+      <div id="pac-card">
         <div id="pac-title">Find the nearest location</div>
         <div id="pac-container">
-            <input
-                id="pac-input"
-                type="text"
-                placeholder="Enter an address"
-                class="pac-target-input"
-                autocomplete="off"
-            />
+          <input id="pac-input" type="text" placeholder="Enter an address" class="pac-target-input" autocomplete="off" />
         </div>
+      </div>
+      <div id="panel" class="closed">
+        <select id="destination-select"></select>
+        <!-- Add additional content for panel here -->
+      </div>
     </div>
+
+    <!-- Map Container -->
     <div id="map"></div>
-    <div id="panel" class="closed">
-        <select id="destination-select">
-        </select>
-    </div>
-</body>
+  </body>
 </html>
