Fixed distance calc and panel list by distance

--- a/static/index.html
+++ b/static/index.html
@@ -9,21 +9,12 @@
   <body>
     <!-- Map Container -->
     <div id="map"></div>
-    <div id="panel" class="closed">
-      <select id="destination-select"></select>
-      <!-- Add additional content for panel here -->
-    </div>
-    <!-- Side Container for pac-card and panel -->
-    <div id="side-container" class="hidden">
-      <div id="pac-card">
+    <div id="panel" class="closed"></div>
+    <div id="pac-card">
         <div id="pac-title">Find the nearest location</div>
         <div id="pac-container">
           <input id="pac-input" type="text" placeholder="Enter an address" class="pac-target-input" autocomplete="off" />
         </div>
-      </div>
-
     </div>
-
-
   </body>
 </html>
