--- a/static/index.html
+++ b/static/index.html
@@ -7,21 +7,28 @@
     <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmBgSWWPs4Ocit1Fe3gLNtgrU31DzUfKk&v=weekly&libraries=places&callback=initialize"></script>
   </head>
   <body>
-    <!-- Map Container -->
-    <div id="map"></div>
-
-    <!-- Side Container for pac-card and panel -->
-    <div id="side-container" style="border: red 2px solid">
-      <div id="pac-card">
-        <div id="pac-title">Find the nearest location</div>
-        <div id="pac-container">
-          <input id="pac-input" type="text" placeholder="Enter an address" class="pac-target-input" autocomplete="off" />
-        </div>
-      </div>
-      <div id="panel" class="closed">
+    <!-- Divs above map and panel -->
+    <div id="app-title">
+      <h2>Title Div: 'Bike Repair Stations'</h2>
+      <p>Change css except for the position: absolute</p>
+    </div>
+    <div id="info-button">
+      <h2>Info Button Div: '?'</h2>
+    </div>
+    <div id="pac-card">
+      <div id="pac-title">Find the nearest location</div>
+      <div id="pac-container">
+        <input id="pac-input" type="text" placeholder="Enter an address" class="pac-target-input" autocomplete="off" />
       </div>
     </div>
-
+    <!-- Page Container to grid map and panel-->
+    <div id="page-container">
+      <div id="map"></div>
+      <div id="side-container">
+        <div id="panel" class="closed">
+        </div>
+      </div>
+    </div>
 
   </body>
 </html>
