Title and About button

--- a/static/index.html
+++ b/static/index.html
@@ -9,12 +9,12 @@
   <body>
     <!-- Divs above map and panel -->
     <div id="app-title">
-      <h2>Title Div: 'Bike Repair Stations'</h2>
-      <p>Change css except for the position: absolute</p>
+      <h1>Madison CycleCare: Your Guide to Bike Repairs</h1>
+      <div id="about-button">
+        <h2>About & Tips</h2>
+      </div>
     </div>
-    <div id="info-button">
-      <h2>Info Button Div: '?'</h2>
-    </div>
+   
     <div id="pac-card">
       <div id="pac-title">Find the nearest location</div>
       <div id="pac-container">
