place text wrap in panel

--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,7 @@
       <div id="map"></div>
       <div id="side-container">
         <div id="pac-card">
-          <div id="pac-title">Find the nearest location</div>
+          <div id="pac-title">Find the Nearest Location</div>
           <div id="pac-container">
             <input id="pac-input" type="text" placeholder="Enter an address" class="pac-target-input" autocomplete="off" />
           </div>
